--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: cicdagent
+      name: 'cicdagent'
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
