--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,19 +30,9 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build Docker Container
+      displayName: Build and Push an image to container registry
       inputs:
-        command: build
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        arguments: --platform linux/amd64
-        tags: |
-          $(tag)
-    - task: Docker@2
-      displayName: Push an image to container registry
-      inputs:
-        command: push
+        command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
