--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ stages:
       inputs:
         containerRegistry: '$(dockerRegistryServiceConnection)'
         command: 'login'
-    - script: "docker pull $(repositoryAddress)/$(imageRepository):$(tag)"
+    - script: "docker pull $(containerRegistry)/$(imageRepository):$(tag)"
       displayName: Pull latest image for layer cashing
       continueOnError: true
 
@@ -43,7 +43,7 @@ stages:
         command: build
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
-        arguments: '--cache-from=$(repositoryAddress)/$(imageRepository):$(tag)'
+        arguments: '--cache-from=$(containerRegistry)/$(imageRepository):$(tag)'
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
