--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,61 +1,49 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+  # Docker
+  # Build and push an image to Azure Container Registry
+  # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
-trigger:
-- main
+  trigger:
+    - main
 
-resources:
-- repo: self
+  resources:
+    - repo: self
 
-variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'a4a24aca-f1e6-4f77-b5a7-3679b2180967'
-  imageRepository: 'simulationimage'
-  containerRegistry: 'cicdpoc.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-#  tag: '$(Build.BuildId)'
-  tag: 'latest'
+  variables:
+    # Container registry service connection established during pipeline creation
+    dockerRegistryServiceConnection: 'a4a24aca-f1e6-4f77-b5a7-3679b2180967'
+    imageRepository: 'simulationimage'
+    containerRegistry: 'cicdpoc.azurecr.io'
+    dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+    tag: '$(Build.BuildId)'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-  DOCKER_BUILDKIT: 1
+    backendServiceArm: 'simulationdeployPOC-rg'
+    backendAzureRmResourceGroupName: 'simulationdeployPOC-rg'
 
-stages:
-- stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      condition: false
-      inputs:
-        containerRegistry: '$(dockerRegistryServiceConnection)'
-        command: 'login'
-    - script: "docker pull $(containerRegistry)/$(imageRepository):$(tag)"
-      displayName: Pull latest image for layer cashing
-      continueOnError: true
+    environment: 'development'
+    terraform_version: '1.0.10'
 
-    - task: Docker@2
-      displayName: Build image
-      inputs:
-        command: build
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        arguments: '--cache-from=$(containerRegistry)/$(imageRepository):$(tag)'
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+    # Agent VM image name
+    vmImageName: 'ubuntu-latest'
+    DOCKER_BUILDKIT: 1
 
-    - task: Docker@2
-      displayName: Push an image to container registry
-      inputs:
-        command: push
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  stages:
+  - stage: terraform_base
+    jobs:
+      - template: templates/terraform-apply.yaml
+        parameters:
+          backendServiceArm: '${{ variables.backendServiceArm }}'
+          backendAzureRmResourceGroupName: '${{ variables.backendAzureRmResourceGroupName }}'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform_cr/'
+          environment: ${{ variables.environment }}
+          terraform_version: ${{ variables.terraform_version }}
+
+  - stage: Build
+    dependsOn: [ terraform_base ]
+    displayName: Build and push stage
+    jobs:
+      - template: templates/docker.yaml
+        parameters:
+          repository: ${{ variables.imageRepository }}
+          dockerfile: ${{ variables.dockerfilePath }}
+          containerRegistry: ${{ variables.dockerRegistryServiceConnection }}
+          tag: ${{ variables.tag }}
