Added Terraform Apply Config

--- a/templates/terraform-apply.yaml
+++ b/templates/terraform-apply.yaml
@@ -27,6 +27,16 @@
             environmentServiceNameAzureRM: '${{ parameters.backendServiceArm }}'
             workingDirectory: '${{ parameters.workingDirectory }}'
 
+        - task: TerraformTaskV2@2
+          displayName: 'Terraform Apply'
+          condition: succeeded()
+          inputs:
+            provider: azurerm
+            command: 'apply'
+            commandOptions: '-var build_id=$(Build.BuildId) -input=false -auto-approve  -var-file="../tfvars/${{ parameters.environment }}/${{ parameters.environment }}.tfvars"'
+            environmentServiceNameAzureRM: '${{ parameters.backendServiceArm }}'
+            workingDirectory: '${{ parameters.workingDirectory }}'
+
 
 
 
