--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@
     dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
     tag: '$(Build.BuildId)'
 
-    backendServiceArm: 'Azure subscription 1 (7122eee9-66c8-4e94-8a9a-56733a94bc91)'
+    backendServiceArm: 'MyServiceConnection'
     backendAzureRmResourceGroupName: 'cicdpocrg'
     backendAzureRmStorageAccountName: 'terraformpocsa'
     backendAzureRmContainerName: 'terraform-state'
