--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@
         parameters:
           backendServiceArm: '${{ variables.backendServiceArm }}'
           backendAzureRmResourceGroupName: '${{ variables.backendAzureRmResourceGroupName }}'
-          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform_cr/'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/platform/terraform_cr/'
           backendAzureRmStorageAccountName: '${{ variables.backendAzureRmStorageAccountName }}'
           backendAzureRmContainerName: '${{ variables.backendAzureRmContainerName }}'
           backendAzureRmKey: '${{ variables.backendAzureRmKey }}'
@@ -53,3 +53,18 @@
           dockerfile: ${{ variables.dockerfilePath }}
           containerRegistry: ${{ variables.dockerRegistryServiceConnection }}
           tag: ${{ variables.tag }}
+
+  - stage: terraform_aci_deploy
+    dependsOn: [ Build ]
+    displayName:  Deploy Image to Container
+    jobs:
+      -template: templates/terraform-apply.yaml
+      parameters:
+          backendServiceArm: '${{ variables.backendServiceArm }}'
+          backendAzureRmResourceGroupName: '${{ variables.backendAzureRmResourceGroupName }}'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/platform/terraform_aci/'
+          backendAzureRmStorageAccountName: '${{ variables.backendAzureRmStorageAccountName }}'
+          backendAzureRmContainerName: '${{ variables.backendAzureRmContainerName }}'
+          backendAzureRmKey: '${{ variables.backendAzureRmKey }}'
+          environment: ${{ variables.environment }}
+          terraform_version: ${{ variables.terraform_version }}
