--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,11 @@
     vmImageName: 'ubuntu-latest'
     DOCKER_BUILDKIT: 1
 
+    SkipSteps: true
+
   stages:
   - stage: terraform_base
+    condition: eq('${{ SkipSteps }}', false)
     jobs:
       - template: templates/terraform-apply.yaml
         parameters:
@@ -45,6 +48,7 @@
 
   - stage: Build
     dependsOn: [ terraform_base ]
+    condition: eq('${{ SkipSteps }}', false)
     displayName: Build and push stage
     jobs:
       - template: templates/docker.yaml
